2008-08-09  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

        Reviewed by Oliver.

        Revision 35651, despite being a rather trivial change, introduced a
        large regression on the regexp-dna SunSpider test. This regression
        stemmed from an increase in the size of CodeBlock::dump(). There is
        no reason for this method (and several related methods) to be compiled
        in non-debug builds with the sampling tool disabled. This patch
        conditionally compiles them, reversing the regression on SunSpider.

        * JavaScriptCore.exp:
        * VM/CodeBlock.cpp:
        * VM/CodeBlock.h:
        * VM/Machine.cpp:

2008-08-08  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

        Reviewed by Oliver.

        Bug 20330: JSCore crash loading any filehurricane media page
        <https://bugs.webkit.org/show_bug.cgi?id=20330>

        Fix a typo in the constant loading patch. Also, add a case for
        op_unexpected_load to CodeBlock::dump().

        * VM/CodeBlock.cpp:
        (KJS::CodeBlock::dump):
        * VM/CodeGenerator.cpp:
        (KJS::CodeGenerator::addUnexpectedConstant):

2008-08-08  Matt Lilek  <webkit@mattlilek.com>

        Not reviewed, build fix.

        * JavaScriptCore.exp:

2008-08-08  Oliver Hunt  <oliver@apple.com>

        Reviewed by Cameron Zwarich.

        Improve performance of arithmetic operators

        Added a fast (non-virtual) mechanism to determine if a non-immediate JSValue*
        is a JSNumberCell.  We then use this to allow improved specialisation in many
        arithmetic operators.  SunSpider reports a 2.5% progression overall, with greater
        than 10% progressions on a number of arithmetic heavy tests.

        * VM/Machine.cpp:
        (KJS::fastIsNumber):
        (KJS::fastToInt32):
        (KJS::fastToUInt32):
        (KJS::jsLess):
        (KJS::jsLessEq):
        (KJS::jsAdd):
        (KJS::Machine::privateExecute):
        * kjs/JSNumberCell.h: