@@ -1,5 +1,15 @@
 2008-08-09  Cameron Zwarich  <cwzwarich@uwaterloo.ca>
 
+        Reviewed by Maciej.
+
+        Fix some style issues in the sampling tool.
+
+        * VM/SamplingTool.cpp:
+        (KJS::sleepForMicroseconds):
+        (KJS::SamplingTool::dump):
+
+2008-08-09  Cameron Zwarich  <cwzwarich@uwaterloo.ca>
+
         Reviewed by Oliver.
 
         Revision 35651, despite being a rather trivial change, introduced a
